For #196 - Allow user to set custom stream factory for any set of protocols.
For example a user could create a database: protocol.